--- a/genindex.html
+++ b/genindex.html
@@ -385,6 +385,8 @@
 </li>
         <li><a href="engine/internal/component.html#scripts.engine.internal.component.Identity.__init__">(Identity method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.Identity.__init__">[1]</a>
 </li>
+        <li><a href="engine/internal/component.html#scripts.engine.internal.component.Immunities.__init__">(Immunities method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.Immunities.__init__">[1]</a>
+</li>
         <li><a href="engine/core/system.html#scripts.engine.core.system.InteractionEventSubscriber.__init__">(InteractionEventSubscriber method)</a>, <a href="scripts.engine.core.html#scripts.engine.core.system.InteractionEventSubscriber.__init__">[1]</a>
 </li>
         <li><a href="engine/internal/component.html#scripts.engine.internal.component.Knowledge.__init__">(Knowledge method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.Knowledge.__init__">[1]</a>
@@ -492,6 +494,22 @@
 </li>
       <li><a href="nqp/actions/skill.html#scripts.nqp.actions.skill.Lunge._build_damage_effect">_build_damage_effect() (Lunge method)</a>
 </li>
+      <li><a href="nqp/actions/skill.html#scripts.nqp.actions.skill.BasicAttack._build_effects">_build_effects() (BasicAttack method)</a>
+
+      <ul>
+        <li><a href="nqp/actions/affliction.html#scripts.nqp.actions.affliction.BoggedDown._build_effects">(BoggedDown method)</a>
+</li>
+        <li><a href="nqp/actions/affliction.html#scripts.nqp.actions.affliction.Flaming._build_effects">(Flaming method)</a>
+</li>
+        <li><a href="nqp/actions/skill.html#scripts.nqp.actions.skill.Lunge._build_effects">(Lunge method)</a>
+</li>
+        <li><a href="nqp/actions/skill.html#scripts.nqp.actions.skill.Move._build_effects">(Move method)</a>
+</li>
+        <li><a href="nqp/actions/skill.html#scripts.nqp.actions.skill.Splash._build_effects">(Splash method)</a>
+</li>
+        <li><a href="nqp/actions/skill.html#scripts.nqp.actions.skill.TarAndFeather._build_effects">(TarAndFeather method)</a>
+</li>
+      </ul></li>
       <li><a href="nqp/actions/skill.html#scripts.nqp.actions.skill.Lunge._build_move_effect">_build_move_effect() (Lunge method)</a>
 </li>
       <li><a href="nqp/actions/skill.html#scripts.nqp.actions.skill.Lunge._find_target">_find_target() (Lunge method)</a>
@@ -588,6 +606,8 @@
 </li>
       <li><a href="engine/world_objects/lighting.html#scripts.engine.world_objects.lighting.LightBox.add_dynamic_walls">add_dynamic_walls() (LightBox method)</a>, <a href="scripts.engine.world_objects.html#scripts.engine.world_objects.lighting.LightBox.add_dynamic_walls">[1]</a>
 </li>
+      <li><a href="engine/core/world.html#scripts.engine.core.world.add_immunity">add_immunity() (in module scripts.engine.core.world)</a>, <a href="scripts.engine.core.html#scripts.engine.core.world.add_immunity">[1]</a>
+</li>
       <li><a href="engine/world_objects/lighting.html#scripts.engine.world_objects.lighting.LightBox.add_light">add_light() (LightBox method)</a>, <a href="scripts.engine.world_objects.html#scripts.engine.world_objects.lighting.LightBox.add_light">[1]</a>
 </li>
       <li><a href="nqp/elements/message_log.html#scripts.nqp.ui_elements.message_log.MessageLog.add_message">add_message() (MessageLog method)</a>, <a href="scripts.nqp.ui_elements.html#scripts.nqp.ui_elements.message_log.MessageLog.add_message">[1]</a>
@@ -620,10 +640,10 @@
       </ul></li>
       <li><a href="tests.engine.html#tests.engine.test_effect.affect_terrain_amount">affect_terrain_amount() (in module tests.engine.test_effect)</a>
 </li>
-      <li><a href="tests.engine.html#tests.engine.test_effect.affect_terrain_negative_amount">affect_terrain_negative_amount() (in module tests.engine.test_effect)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="tests.engine.html#tests.engine.test_effect.affect_terrain_negative_amount">affect_terrain_negative_amount() (in module tests.engine.test_effect)</a>
+</li>
       <li><a href="engine/internal/effect.html#scripts.engine.internal.effect.AffectCooldownEffect">AffectCooldownEffect (class in scripts.engine.internal.effect)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.effect.AffectCooldownEffect">[1]</a>
 </li>
       <li><a href="engine/internal/definition.html#scripts.engine.internal.definition.AffectCooldownEffectData">AffectCooldownEffectData (class in scripts.engine.internal.definition)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.definition.AffectCooldownEffectData">[1]</a>
@@ -752,6 +772,8 @@
 </li>
       <li><a href="engine/internal/action.html#scripts.engine.internal.action.Behaviour">Behaviour (class in scripts.engine.internal.action)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.action.Behaviour">[1]</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.ActorData.behaviour_name">behaviour_name (ActorData attribute)</a>
 </li>
       <li><a href="engine/world_objects/game_map.html#scripts.engine.world_objects.game_map.GameMap.block_movement_map">block_movement_map() (GameMap property)</a>, <a href="scripts.engine.world_objects.html#scripts.engine.world_objects.game_map.GameMap.block_movement_map">[1]</a>
@@ -762,8 +784,6 @@
 </li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.TerrainData.blocks_movement">blocks_movement (TerrainData attribute)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="nqp/actions/affliction.html#scripts.nqp.actions.affliction.BoggedDown">BoggedDown (class in scripts.nqp.actions.affliction)</a>, <a href="scripts.nqp.actions.html#scripts.nqp.actions.affliction.BoggedDown">[1]</a>
 </li>
       <li><a href="engine/core/dungen.html#scripts.engine.core.dungen.DungeonGenerator.bools_map">bools_map() (DungeonGenerator property)</a>, <a href="scripts.engine.core.html#scripts.engine.core.dungen.DungeonGenerator.bools_map">[1]</a>
@@ -776,28 +796,6 @@
 </li>
       <li><a href="engine/world_objects/lighting.html#scripts.engine.world_objects.lighting.box">box() (in module scripts.engine.world_objects.lighting)</a>, <a href="scripts.engine.world_objects.html#scripts.engine.world_objects.lighting.box">[1]</a>
 </li>
-      <li><a href="engine/internal/action.html#scripts.engine.internal.action.Action.build_effects">build_effects() (Action method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.action.Action.build_effects">[1]</a>
-
-      <ul>
-        <li><a href="engine/internal/action.html#scripts.engine.internal.action.Affliction.build_effects">(Affliction method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.action.Affliction.build_effects">[1]</a>
-</li>
-        <li><a href="nqp/actions/skill.html#scripts.nqp.actions.skill.BasicAttack.build_effects">(BasicAttack method)</a>, <a href="scripts.nqp.actions.html#scripts.nqp.actions.skill.BasicAttack.build_effects">[1]</a>
-</li>
-        <li><a href="nqp/actions/affliction.html#scripts.nqp.actions.affliction.BoggedDown.build_effects">(BoggedDown method)</a>, <a href="scripts.nqp.actions.html#scripts.nqp.actions.affliction.BoggedDown.build_effects">[1]</a>
-</li>
-        <li><a href="nqp/actions/affliction.html#scripts.nqp.actions.affliction.Flaming.build_effects">(Flaming method)</a>, <a href="scripts.nqp.actions.html#scripts.nqp.actions.affliction.Flaming.build_effects">[1]</a>
-</li>
-        <li><a href="nqp/actions/skill.html#scripts.nqp.actions.skill.Lunge.build_effects">(Lunge method)</a>, <a href="scripts.nqp.actions.html#scripts.nqp.actions.skill.Lunge.build_effects">[1]</a>
-</li>
-        <li><a href="nqp/actions/skill.html#scripts.nqp.actions.skill.Move.build_effects">(Move method)</a>, <a href="scripts.nqp.actions.html#scripts.nqp.actions.skill.Move.build_effects">[1]</a>
-</li>
-        <li><a href="engine/internal/action.html#scripts.engine.internal.action.Skill.build_effects">(Skill method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.action.Skill.build_effects">[1]</a>
-</li>
-        <li><a href="nqp/actions/skill.html#scripts.nqp.actions.skill.Splash.build_effects">(Splash method)</a>, <a href="scripts.nqp.actions.html#scripts.nqp.actions.skill.Splash.build_effects">[1]</a>
-</li>
-        <li><a href="nqp/actions/skill.html#scripts.nqp.actions.skill.TarAndFeather.build_effects">(TarAndFeather method)</a>, <a href="scripts.nqp.actions.html#scripts.nqp.actions.skill.TarAndFeather.build_effects">[1]</a>
-</li>
-      </ul></li>
       <li><a href="engine/core/utility.html#scripts.engine.core.utility.build_sprites_from_paths">build_sprites_from_paths() (in module scripts.engine.core.utility)</a>, <a href="scripts.engine.core.html#scripts.engine.core.utility.build_sprites_from_paths">[1]</a>
 </li>
       <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.DamageType.BURN">BURN (DamageType attribute)</a>
@@ -1047,6 +1045,8 @@
 </li>
         <li><a href="engine/internal/component.html#scripts.engine.internal.component.Identity.deserialize">(Identity class method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.Identity.deserialize">[1]</a>
 </li>
+        <li><a href="engine/internal/component.html#scripts.engine.internal.component.Immunities.deserialize">(Immunities class method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.Immunities.deserialize">[1]</a>
+</li>
         <li><a href="engine/internal/component.html#scripts.engine.internal.component.IsActive.deserialize">(IsActive class method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.IsActive.deserialize">[1]</a>
 </li>
         <li><a href="engine/internal/component.html#scripts.engine.internal.component.IsPlayer.deserialize">(IsPlayer class method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.IsPlayer.deserialize">[1]</a>
@@ -1202,10 +1202,12 @@
 </li>
       <li><a href="engine/core/event.html#scripts.engine.core.event.EndTurnEvent">EndTurnEvent (class in scripts.engine.core.event)</a>, <a href="scripts.engine.core.html#scripts.engine.core.event.EndTurnEvent">[1]</a>
 </li>
-      <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.UIElement.ENTITY_QUEUE">ENTITY_QUEUE (UIElement attribute)</a>
+      <li><a href="engine/core/world.html#scripts.engine.core.world.entity_has_immunity">entity_has_immunity() (in module scripts.engine.core.world)</a>, <a href="scripts.engine.core.html#scripts.engine.core.world.entity_has_immunity">[1]</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="scripts.engine.internal.html#scripts.engine.internal.constant.UIElement.ENTITY_QUEUE">ENTITY_QUEUE (UIElement attribute)</a>
+</li>
       <li><a href="engine/internal/effect.html#scripts.engine.internal.effect.AffectCooldownEffect.evaluate">evaluate() (AffectCooldownEffect method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.effect.AffectCooldownEffect.evaluate">[1]</a>
 
       <ul>
@@ -1530,6 +1532,8 @@
         <li><a href="scripts.engine.internal.html#scripts.engine.internal.definition.TraitSpritesData.idle">(TraitSpritesData attribute)</a>
 </li>
       </ul></li>
+      <li><a href="engine/internal/component.html#scripts.engine.internal.component.Immunities">Immunities (class in scripts.engine.internal.component)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.Immunities">[1]</a>
+</li>
       <li><a href="nqp/general/command.html#scripts.nqp.command.init_subscribers">init_subscribers() (in module scripts.nqp.command)</a>, <a href="scripts.nqp.html#scripts.nqp.command.init_subscribers">[1]</a>
 </li>
       <li><a href="nqp/general/command.html#scripts.nqp.command.initialise_game">initialise_game() (in module scripts.nqp.command)</a>, <a href="scripts.nqp.html#scripts.nqp.command.initialise_game">[1]</a>
@@ -2147,6 +2151,8 @@
 </li>
       <li><a href="engine/core/system.html#scripts.engine.core.system.reduce_affliction_durations">reduce_affliction_durations() (in module scripts.engine.core.system)</a>, <a href="scripts.engine.core.html#scripts.engine.core.system.reduce_affliction_durations">[1]</a>
 </li>
+      <li><a href="engine/core/system.html#scripts.engine.core.system.reduce_immunity_durations">reduce_immunity_durations() (in module scripts.engine.core.system)</a>, <a href="scripts.engine.core.html#scripts.engine.core.system.reduce_immunity_durations">[1]</a>
+</li>
       <li><a href="engine/core/system.html#scripts.engine.core.system.reduce_lifespan_durations">reduce_lifespan_durations() (in module scripts.engine.core.system)</a>, <a href="scripts.engine.core.html#scripts.engine.core.system.reduce_lifespan_durations">[1]</a>
 </li>
       <li><a href="engine/core/system.html#scripts.engine.core.system.reduce_skill_cooldowns">reduce_skill_cooldowns() (in module scripts.engine.core.system)</a>, <a href="scripts.engine.core.html#scripts.engine.core.system.reduce_skill_cooldowns">[1]</a>
@@ -2684,6 +2690,8 @@
         <li><a href="engine/internal/component.html#scripts.engine.internal.component.HasCombatStats.serialize">(HasCombatStats method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.HasCombatStats.serialize">[1]</a>
 </li>
         <li><a href="engine/internal/component.html#scripts.engine.internal.component.Identity.serialize">(Identity method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.Identity.serialize">[1]</a>
+</li>
+        <li><a href="engine/internal/component.html#scripts.engine.internal.component.Immunities.serialize">(Immunities method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.Immunities.serialize">[1]</a>
 </li>
         <li><a href="engine/internal/component.html#scripts.engine.internal.component.IsActive.serialize">(IsActive method)</a>, <a href="scripts.engine.internal.html#scripts.engine.internal.component.IsActive.serialize">[1]</a>
 </li>
