--- a/_modules/scripts/engine/core/system.html
+++ b/_modules/scripts/engine/core/system.html
@@ -275,6 +275,7 @@
 <span class="kn">from</span> <span class="nn">scripts.engine.internal.component</span> <span class="kn">import</span> <span class="p">(</span>
     <span class="n">Afflictions</span><span class="p">,</span>
     <span class="n">FOV</span><span class="p">,</span>
+    <span class="n">Immunities</span><span class="p">,</span>
     <span class="n">IsActive</span><span class="p">,</span>
     <span class="n">Knowledge</span><span class="p">,</span>
     <span class="n">Lifespan</span><span class="p">,</span>
@@ -305,6 +306,7 @@
     <span class="s2">"reduce_skill_cooldowns"</span><span class="p">,</span>
     <span class="s2">"reduce_affliction_durations"</span><span class="p">,</span>
     <span class="s2">"reduce_lifespan_durations"</span><span class="p">,</span>
+    <span class="s2">"reduce_immunity_durations"</span><span class="p">,</span>
 <span class="p">]</span>
 
 <span class="c1">########################### GENERAL ################################</span>
@@ -476,7 +478,8 @@
 
             <span class="c1"># handle expiry</span>
             <span class="k">if</span> <span class="n">affliction</span><span class="o">.</span><span class="n">duration</span> <span class="o">&lt;=</span> <span class="mi">0</span><span class="p">:</span>
-                <span class="n">world</span><span class="o">.</span><span class="n">remove_affliction</span><span class="p">(</span><span class="n">entity</span><span class="p">,</span> <span class="n">affliction</span><span class="p">)</span></div>
+                <span class="n">world</span><span class="o">.</span><span class="n">remove_affliction</span><span class="p">(</span><span class="n">entity</span><span class="p">,</span> <span class="n">affliction</span><span class="p">)</span>
+                <span class="n">logging</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="sa">f</span><span class="s2">"Removed </span><span class="si">{</span><span class="n">affliction</span><span class="o">.</span><span class="n">f_name</span><span class="si">}</span><span class="s2"> from '</span><span class="si">{</span><span class="n">world</span><span class="o">.</span><span class="n">get_name</span><span class="p">(</span><span class="n">entity</span><span class="p">)</span><span class="si">}</span><span class="s2">'."</span><span class="p">)</span></div>
 
 
 <div class="viewcode-block" id="reduce_lifespan_durations"><a class="viewcode-back" href="../../../../scripts.engine.core.html#scripts.engine.core.system.reduce_lifespan_durations">[docs]</a><span class="k">def</span> <span class="nf">reduce_lifespan_durations</span><span class="p">():</span>
@@ -492,8 +495,28 @@
 
         <span class="c1"># handle expiry</span>
         <span class="k">if</span> <span class="n">lifespan</span><span class="o">.</span><span class="n">duration</span> <span class="o">&lt;=</span> <span class="mi">0</span><span class="p">:</span>
-            <span class="n">logging</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="sa">f</span><span class="s2">"</span><span class="si">{</span><span class="n">world</span><span class="o">.</span><span class="n">get_name</span><span class="p">(</span><span class="n">entity</span><span class="p">)</span><span class="si">}</span><span class="s2">`s lifespan has expired. "</span><span class="p">)</span>
-            <span class="n">world</span><span class="o">.</span><span class="n">kill_entity</span><span class="p">(</span><span class="n">entity</span><span class="p">)</span></div>
+            <span class="n">world</span><span class="o">.</span><span class="n">kill_entity</span><span class="p">(</span><span class="n">entity</span><span class="p">)</span>
+            <span class="n">logging</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="sa">f</span><span class="s2">"'</span><span class="si">{</span><span class="n">world</span><span class="o">.</span><span class="n">get_name</span><span class="p">(</span><span class="n">entity</span><span class="p">)</span><span class="si">}</span><span class="s2">'s lifespan has expired and they have been killed."</span><span class="p">)</span></div>
+
+
+<div class="viewcode-block" id="reduce_immunity_durations"><a class="viewcode-back" href="../../../../scripts.engine.core.html#scripts.engine.core.system.reduce_immunity_durations">[docs]</a><span class="k">def</span> <span class="nf">reduce_immunity_durations</span><span class="p">():</span>
+    <span class="sd">"""</span>
+<span class="sd">    Reduce all immunity durations</span>
+<span class="sd">    """</span>
+    <span class="k">for</span> <span class="n">entity</span><span class="p">,</span> <span class="p">(</span><span class="n">immunities</span><span class="p">,)</span> <span class="ow">in</span> <span class="n">query</span><span class="o">.</span><span class="n">immunities</span><span class="p">:</span>
+        <span class="k">assert</span> <span class="nb">isinstance</span><span class="p">(</span><span class="n">immunities</span><span class="p">,</span> <span class="n">Immunities</span><span class="p">)</span>
+        <span class="n">_active</span> <span class="o">=</span> <span class="n">immunities</span><span class="o">.</span><span class="n">active</span><span class="o">.</span><span class="n">copy</span><span class="p">()</span>
+        <span class="k">for</span> <span class="n">immunity_name</span><span class="p">,</span> <span class="n">duration</span> <span class="ow">in</span> <span class="n">_active</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
+
+            <span class="k">if</span> <span class="n">duration</span> <span class="o">!=</span> <span class="n">INFINITE</span><span class="p">:</span>
+                <span class="c1"># reduce duration if not infinite</span>
+                <span class="n">immunities</span><span class="o">.</span><span class="n">active</span><span class="p">[</span><span class="n">immunity_name</span><span class="p">]</span> <span class="o">-=</span> <span class="mi">1</span>
+                <span class="n">duration</span> <span class="o">-=</span> <span class="mi">1</span>
+
+            <span class="c1"># handle expiry</span>
+            <span class="k">if</span> <span class="n">duration</span> <span class="o">&lt;=</span> <span class="mi">0</span><span class="p">:</span>
+                <span class="n">immunities</span><span class="o">.</span><span class="n">active</span><span class="o">.</span><span class="n">pop</span><span class="p">(</span><span class="n">immunity_name</span><span class="p">)</span>
+                <span class="n">logging</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="sa">f</span><span class="s2">"Removed </span><span class="si">{</span><span class="n">immunity_name</span><span class="si">}</span><span class="s2"> from '</span><span class="si">{</span><span class="n">world</span><span class="o">.</span><span class="n">get_name</span><span class="p">(</span><span class="n">entity</span><span class="p">)</span><span class="si">}</span><span class="s2">'s "</span> <span class="sa">f</span><span class="s2">"list of immunities."</span><span class="p">)</span></div>
 
 
 <span class="c1">########################### GENERIC REACTION HANDLING ##############################</span>
@@ -554,7 +577,7 @@
 
             <span class="n">logging</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span>
                 <span class="sa">f</span><span class="s2">"</span><span class="si">{</span><span class="n">world</span><span class="o">.</span><span class="n">get_name</span><span class="p">(</span><span class="n">entity</span><span class="p">)</span><span class="si">}</span><span class="s2">`s opinion of </span><span class="si">{</span><span class="n">world</span><span class="o">.</span><span class="n">get_name</span><span class="p">(</span><span class="n">causing_entity</span><span class="p">)</span><span class="si">}</span><span class="s2"> is now "</span>
-                <span class="sa">f</span><span class="s2">" </span><span class="si">{</span><span class="n">opinion</span><span class="o">.</span><span class="n">opinions</span><span class="p">[</span><span class="n">causing_entity</span><span class="p">]</span><span class="si">}</span><span class="s2">."</span>
+                <span class="sa">f</span><span class="s2">"</span><span class="si">{</span><span class="n">opinion</span><span class="o">.</span><span class="n">opinions</span><span class="p">[</span><span class="n">causing_entity</span><span class="p">]</span><span class="si">}</span><span class="s2"> due to </span><span class="si">{</span><span class="n">reaction_trigger</span><span class="si">}</span><span class="s2">."</span>
             <span class="p">)</span>
 
 
