--- a/_modules/scripts/engine/core/world.html
+++ b/_modules/scripts/engine/core/world.html
@@ -275,6 +275,7 @@
     <span class="n">FOV</span><span class="p">,</span>
     <span class="n">HasCombatStats</span><span class="p">,</span>
     <span class="n">Identity</span><span class="p">,</span>
+    <span class="n">Immunities</span><span class="p">,</span>
     <span class="n">IsActive</span><span class="p">,</span>
     <span class="n">IsPlayer</span><span class="p">,</span>
     <span class="n">Knowledge</span><span class="p">,</span>
@@ -388,7 +389,7 @@
     <span class="n">god</span><span class="o">.</span><span class="n">append</span><span class="p">((</span><span class="n">Resources</span><span class="p">(</span><span class="n">INFINITE</span><span class="p">,</span> <span class="n">INFINITE</span><span class="p">)))</span>
     <span class="n">entity</span> <span class="o">=</span> <span class="n">create_entity</span><span class="p">(</span><span class="n">god</span><span class="p">)</span>
 
-    <span class="n">logging</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="sa">f</span><span class="s2">"God, '</span><span class="si">{</span><span class="n">god_data</span><span class="o">.</span><span class="n">name</span><span class="si">}</span><span class="s2">', created."</span><span class="p">)</span>
+    <span class="n">logging</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="sa">f</span><span class="s2">"God Entity, '</span><span class="si">{</span><span class="n">god_data</span><span class="o">.</span><span class="n">name</span><span class="si">}</span><span class="s2">', created."</span><span class="p">)</span>
 
     <span class="k">return</span> <span class="n">entity</span></div>
 
@@ -418,6 +419,7 @@
     <span class="n">components</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">Traits</span><span class="p">(</span><span class="n">actor_data</span><span class="o">.</span><span class="n">trait_names</span><span class="p">))</span>
     <span class="n">components</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">FOV</span><span class="p">())</span>
     <span class="n">components</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">Tracked</span><span class="p">(</span><span class="n">chronicle</span><span class="o">.</span><span class="n">get_time</span><span class="p">()))</span>
+    <span class="n">components</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">Immunities</span><span class="p">())</span>
 
     <span class="c1"># set up light</span>
     <span class="n">radius</span> <span class="o">=</span> <span class="mi">2</span>  <span class="c1"># TODO - pull radius and colour from external data</span>
@@ -482,7 +484,7 @@
     <span class="n">stats</span> <span class="o">=</span> <span class="n">create_combat_stats</span><span class="p">(</span><span class="n">entity</span><span class="p">)</span>
     <span class="n">add_component</span><span class="p">(</span><span class="n">entity</span><span class="p">,</span> <span class="n">Resources</span><span class="p">(</span><span class="n">stats</span><span class="o">.</span><span class="n">max_health</span><span class="p">,</span> <span class="n">stats</span><span class="o">.</span><span class="n">max_stamina</span><span class="p">))</span>
 
-    <span class="n">logging</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="sa">f</span><span class="s2">"Entity, '</span><span class="si">{</span><span class="n">name</span><span class="si">}</span><span class="s2">', created."</span><span class="p">)</span>
+    <span class="n">logging</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="sa">f</span><span class="s2">"Actor Entity, '</span><span class="si">{</span><span class="n">name</span><span class="si">}</span><span class="s2">', created."</span><span class="p">)</span>
 
     <span class="k">return</span> <span class="n">entity</span></div>
 
@@ -520,6 +522,8 @@
 
     <span class="c1"># create the entity</span>
     <span class="n">entity</span> <span class="o">=</span> <span class="n">create_entity</span><span class="p">(</span><span class="n">components</span><span class="p">)</span>
+
+    <span class="n">logging</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="sa">f</span><span class="s2">"Terrain Entity, '</span><span class="si">{</span><span class="n">terrain_data</span><span class="o">.</span><span class="n">name</span><span class="si">}</span><span class="s2">', created."</span><span class="p">)</span>
 
     <span class="k">return</span> <span class="n">entity</span></div>
 
@@ -1416,6 +1420,36 @@
     <span class="k">return</span> <span class="kc">False</span></div>
 
 
+<div class="viewcode-block" id="entity_has_immunity"><a class="viewcode-back" href="../../../../scripts.engine.core.html#scripts.engine.core.world.entity_has_immunity">[docs]</a><span class="k">def</span> <span class="nf">entity_has_immunity</span><span class="p">(</span><span class="n">entity</span><span class="p">:</span> <span class="n">EntityID</span><span class="p">,</span> <span class="n">name</span><span class="p">:</span> <span class="nb">str</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">bool</span><span class="p">:</span>
+    <span class="sd">"""</span>
+<span class="sd">    Check if an entity has immunity to the named Action.</span>
+<span class="sd">    """</span>
+    <span class="k">try</span><span class="p">:</span>
+        <span class="n">immunity</span> <span class="o">=</span> <span class="n">get_entitys_component</span><span class="p">(</span><span class="n">entity</span><span class="p">,</span> <span class="n">Immunities</span><span class="p">)</span>
+        <span class="k">if</span> <span class="n">name</span> <span class="ow">in</span> <span class="n">immunity</span><span class="o">.</span><span class="n">active</span><span class="p">:</span>
+            <span class="k">return</span> <span class="kc">True</span>
+        <span class="k">else</span><span class="p">:</span>
+            <span class="k">return</span> <span class="kc">False</span>
+
+    <span class="k">except</span> <span class="ne">AttributeError</span><span class="p">:</span>
+        <span class="n">logging</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="sa">f</span><span class="s2">"entity_has_immunity: `</span><span class="si">{</span><span class="n">get_name</span><span class="p">(</span><span class="n">entity</span><span class="p">)</span><span class="si">}</span><span class="s2">`, (</span><span class="si">{</span><span class="n">entity</span><span class="si">}</span><span class="s2">), does not have Immunities Component."</span><span class="p">)</span>
+        <span class="k">return</span> <span class="kc">False</span></div>
+
+
+<div class="viewcode-block" id="add_immunity"><a class="viewcode-back" href="../../../../scripts.engine.core.html#scripts.engine.core.world.add_immunity">[docs]</a><span class="k">def</span> <span class="nf">add_immunity</span><span class="p">(</span><span class="n">entity</span><span class="p">:</span> <span class="n">EntityID</span><span class="p">,</span> <span class="n">immunity_name</span><span class="p">:</span> <span class="nb">str</span><span class="p">,</span> <span class="n">duration</span><span class="p">:</span> <span class="nb">int</span><span class="p">):</span>
+    <span class="sd">"""</span>
+<span class="sd">    Add an immunity to an Entity's Immunities Component. If entity has no Immunities Component one will be added.</span>
+<span class="sd">    """</span>
+    <span class="k">try</span><span class="p">:</span>
+        <span class="n">immunity</span> <span class="o">=</span> <span class="n">get_entitys_component</span><span class="p">(</span><span class="n">entity</span><span class="p">,</span> <span class="n">Immunities</span><span class="p">)</span>
+        <span class="n">immunity</span><span class="o">.</span><span class="n">active</span><span class="p">[</span><span class="n">immunity_name</span><span class="p">]</span> <span class="o">=</span> <span class="n">duration</span>
+
+    <span class="k">except</span> <span class="ne">AttributeError</span><span class="p">:</span>
+        <span class="n">add_component</span><span class="p">(</span><span class="n">entity</span><span class="p">,</span> <span class="n">Immunities</span><span class="p">({</span><span class="n">immunity_name</span><span class="p">:</span> <span class="n">duration</span><span class="p">}))</span>
+
+    <span class="n">logging</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="sa">f</span><span class="s2">"'</span><span class="si">{</span><span class="n">get_name</span><span class="p">(</span><span class="n">entity</span><span class="p">)</span><span class="si">}</span><span class="s2">' is now immune to </span><span class="si">{</span><span class="n">immunity_name</span><span class="si">}</span><span class="s2"> for </span><span class="si">{</span><span class="n">duration</span><span class="si">}</span><span class="s2"> rounds."</span><span class="p">)</span></div>
+
+
 <span class="c1">################################ CONDITIONAL ACTIONS - CHANGE STATE - RETURN SUCCESS STATE  #############</span>
 
 
@@ -1486,7 +1520,7 @@
             <span class="k">return</span> <span class="kc">False</span>
     <span class="k">else</span><span class="p">:</span>
         <span class="n">logging</span><span class="o">.</span><span class="n">info</span><span class="p">(</span>
-            <span class="sa">f</span><span class="s1">'Could not apply skill "</span><span class="si">{</span><span class="n">skill</span><span class="o">.</span><span class="vm">__class__</span><span class="o">.</span><span class="vm">__name__</span><span class="si">}</span><span class="s1">", target tile does not have required '</span>
+            <span class="sa">f</span><span class="s2">"Could not apply skill '</span><span class="si">{</span><span class="n">skill</span><span class="o">.</span><span class="vm">__class__</span><span class="o">.</span><span class="vm">__name__</span><span class="si">}</span><span class="s2">', target tile does not have required "</span>
             <span class="sa">f</span><span class="s2">"tags (</span><span class="si">{</span><span class="n">skill</span><span class="o">.</span><span class="n">target_tags</span><span class="si">}</span><span class="s2">)."</span>
         <span class="p">)</span>
 
@@ -1556,7 +1590,7 @@
 
 <div class="viewcode-block" id="apply_damage"><a class="viewcode-back" href="../../../../scripts.engine.core.html#scripts.engine.core.world.apply_damage">[docs]</a><span class="k">def</span> <span class="nf">apply_damage</span><span class="p">(</span><span class="n">entity</span><span class="p">:</span> <span class="n">EntityID</span><span class="p">,</span> <span class="n">damage</span><span class="p">:</span> <span class="nb">int</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">bool</span><span class="p">:</span>
     <span class="sd">"""</span>
-<span class="sd">    Remove damage from entity's health. Return remaining health.</span>
+<span class="sd">    Remove damage from entity's health. Return True is damage was applied.</span>
 <span class="sd">    """</span>
     <span class="k">if</span> <span class="n">damage</span> <span class="o">&lt;=</span> <span class="mi">0</span><span class="p">:</span>
         <span class="n">logging</span><span class="o">.</span><span class="n">info</span><span class="p">(</span><span class="sa">f</span><span class="s2">"Damage was </span><span class="si">{</span><span class="n">damage</span><span class="si">}</span><span class="s2"> and therefore nothing was done."</span><span class="p">)</span>
