--- a/_modules/scripts/engine/internal/action.html
+++ b/_modules/scripts/engine/internal/action.html
@@ -297,12 +297,12 @@
     <span class="n">shape</span><span class="p">:</span> <span class="n">ShapeType</span>
     <span class="n">shape_size</span><span class="p">:</span> <span class="nb">int</span>
 
-<div class="viewcode-block" id="Action.build_effects"><a class="viewcode-back" href="../../../../scripts.engine.internal.html#scripts.engine.internal.action.Action.build_effects">[docs]</a>    <span class="nd">@abstractmethod</span>
-    <span class="k">def</span> <span class="nf">build_effects</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">entity</span><span class="p">:</span> <span class="n">EntityID</span><span class="p">,</span> <span class="n">potency</span><span class="p">:</span> <span class="nb">float</span> <span class="o">=</span> <span class="mf">1.0</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">List</span><span class="p">[</span><span class="n">Effect</span><span class="p">]:</span>
+    <span class="nd">@abstractmethod</span>
+    <span class="k">def</span> <span class="nf">_build_effects</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">entity</span><span class="p">:</span> <span class="n">EntityID</span><span class="p">,</span> <span class="n">potency</span><span class="p">:</span> <span class="nb">float</span> <span class="o">=</span> <span class="mf">1.0</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">List</span><span class="p">[</span><span class="n">Effect</span><span class="p">]:</span>
         <span class="sd">"""</span>
 <span class="sd">        Build the effects of this skill applying to a single entity. Must be overridden in subclass.</span>
 <span class="sd">        """</span>
-        <span class="k">pass</span></div></div>
+        <span class="k">pass</span></div>
 
 
 <div class="viewcode-block" id="Skill"><a class="viewcode-back" href="../../../../scripts.engine.internal.html#scripts.engine.internal.action.Skill">[docs]</a><span class="k">class</span> <span class="nc">Skill</span><span class="p">(</span><span class="n">Action</span><span class="p">):</span>
@@ -335,12 +335,12 @@
         <span class="c1"># vars needed to keep track of changes</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">ignore_entities</span><span class="p">:</span> <span class="n">List</span><span class="p">[</span><span class="n">EntityID</span><span class="p">]</span> <span class="o">=</span> <span class="p">[]</span>  <span class="c1"># to ensure entity not hit more than once</span></div>
 
-<div class="viewcode-block" id="Skill.build_effects"><a class="viewcode-back" href="../../../../scripts.engine.internal.html#scripts.engine.internal.action.Skill.build_effects">[docs]</a>    <span class="nd">@abstractmethod</span>
-    <span class="k">def</span> <span class="nf">build_effects</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">entity</span><span class="p">:</span> <span class="n">EntityID</span><span class="p">,</span> <span class="n">potency</span><span class="p">:</span> <span class="nb">float</span> <span class="o">=</span> <span class="mf">1.0</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">List</span><span class="p">[</span><span class="n">Effect</span><span class="p">]:</span>
+    <span class="nd">@abstractmethod</span>
+    <span class="k">def</span> <span class="nf">_build_effects</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">entity</span><span class="p">:</span> <span class="n">EntityID</span><span class="p">,</span> <span class="n">potency</span><span class="p">:</span> <span class="nb">float</span> <span class="o">=</span> <span class="mf">1.0</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">List</span><span class="p">[</span><span class="n">Effect</span><span class="p">]:</span>
         <span class="sd">"""</span>
 <span class="sd">        Build the effects of this skill applying to a single entity. Must be overridden in subclass.</span>
 <span class="sd">        """</span>
-        <span class="k">pass</span></div>
+        <span class="k">pass</span>
 
 <div class="viewcode-block" id="Skill.get_animation"><a class="viewcode-back" href="../../../../scripts.engine.internal.html#scripts.engine.internal.action.Skill.get_animation">[docs]</a>    <span class="k">def</span> <span class="nf">get_animation</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">aesthetic</span><span class="p">:</span> <span class="n">Aesthetic</span><span class="p">):</span>
         <span class="sd">"""</span>
@@ -385,7 +385,7 @@
         <span class="k">for</span> <span class="n">entity</span> <span class="ow">in</span> <span class="n">world</span><span class="o">.</span><span class="n">get_affected_entities</span><span class="p">(</span>
             <span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">target_tile</span><span class="o">.</span><span class="n">x</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">target_tile</span><span class="o">.</span><span class="n">y</span><span class="p">),</span> <span class="bp">self</span><span class="o">.</span><span class="n">shape</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">shape_size</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">direction</span>
         <span class="p">):</span>
-            <span class="k">yield</span> <span class="n">entity</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">build_effects</span><span class="p">(</span><span class="n">entity</span><span class="p">)</span>
+            <span class="k">yield</span> <span class="n">entity</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">_build_effects</span><span class="p">(</span><span class="n">entity</span><span class="p">)</span>
             <span class="n">entity_names</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">world</span><span class="o">.</span><span class="n">get_name</span><span class="p">(</span><span class="n">entity</span><span class="p">))</span></div>
 
 <div class="viewcode-block" id="Skill.use"><a class="viewcode-back" href="../../../../scripts.engine.internal.html#scripts.engine.internal.action.Skill.use">[docs]</a>    <span class="k">def</span> <span class="nf">use</span><span class="p">(</span><span class="bp">self</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="nb">bool</span><span class="p">:</span>
@@ -465,12 +465,12 @@
         <span class="bp">self</span><span class="o">.</span><span class="n">affected_entity</span> <span class="o">=</span> <span class="n">affected_entity</span>
         <span class="bp">self</span><span class="o">.</span><span class="n">duration</span> <span class="o">=</span> <span class="n">duration</span></div>
 
-<div class="viewcode-block" id="Affliction.build_effects"><a class="viewcode-back" href="../../../../scripts.engine.internal.html#scripts.engine.internal.action.Affliction.build_effects">[docs]</a>    <span class="nd">@abstractmethod</span>
-    <span class="k">def</span> <span class="nf">build_effects</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">entity</span><span class="p">:</span> <span class="n">EntityID</span><span class="p">,</span> <span class="n">potency</span><span class="p">:</span> <span class="nb">float</span> <span class="o">=</span> <span class="mf">1.0</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">List</span><span class="p">[</span><span class="n">Effect</span><span class="p">]:</span>
+    <span class="nd">@abstractmethod</span>
+    <span class="k">def</span> <span class="nf">_build_effects</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">entity</span><span class="p">:</span> <span class="n">EntityID</span><span class="p">,</span> <span class="n">potency</span><span class="p">:</span> <span class="nb">float</span> <span class="o">=</span> <span class="mf">1.0</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">List</span><span class="p">[</span><span class="n">Effect</span><span class="p">]:</span>
         <span class="sd">"""</span>
 <span class="sd">        Build the effects of this skill applying to a single entity. Must be overridden in subclass.</span>
 <span class="sd">        """</span>
-        <span class="k">pass</span></div>
+        <span class="k">pass</span>
 
     <span class="nd">@classmethod</span>
     <span class="k">def</span> <span class="nf">_init_properties</span><span class="p">(</span><span class="bp">cls</span><span class="p">):</span>
@@ -507,14 +507,14 @@
                 <span class="k">for</span> <span class="n">entity</span> <span class="ow">in</span> <span class="n">world</span><span class="o">.</span><span class="n">get_affected_entities</span><span class="p">(</span><span class="n">coordinate</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">shape</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">shape_size</span><span class="p">):</span>
                     <span class="k">if</span> <span class="n">entity</span> <span class="ow">not</span> <span class="ow">in</span> <span class="n">entities</span><span class="p">:</span>
                         <span class="n">entities</span><span class="o">.</span><span class="n">add</span><span class="p">(</span><span class="n">entity</span><span class="p">)</span>
-                        <span class="k">yield</span> <span class="n">entity</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">build_effects</span><span class="p">(</span><span class="n">entity</span><span class="p">)</span>
+                        <span class="k">yield</span> <span class="n">entity</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">_build_effects</span><span class="p">(</span><span class="n">entity</span><span class="p">)</span>
                         <span class="n">entity_names</span><span class="o">.</span><span class="n">append</span><span class="p">(</span><span class="n">world</span><span class="o">.</span><span class="n">get_name</span><span class="p">(</span><span class="n">entity</span><span class="p">))</span></div>
 
 <div class="viewcode-block" id="Affliction.trigger"><a class="viewcode-back" href="../../../../scripts.engine.internal.html#scripts.engine.internal.action.Affliction.trigger">[docs]</a>    <span class="k">def</span> <span class="nf">trigger</span><span class="p">(</span><span class="bp">self</span><span class="p">):</span>
         <span class="sd">"""</span>
 <span class="sd">        Trigger the affliction on the affected entity</span>
 <span class="sd">        """</span>
-        <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">affected_entity</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">build_effects</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">affected_entity</span><span class="p">)</span></div></div>
+        <span class="k">yield</span> <span class="bp">self</span><span class="o">.</span><span class="n">affected_entity</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">_build_effects</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">affected_entity</span><span class="p">)</span></div></div>
 
 
 <div class="viewcode-block" id="Behaviour"><a class="viewcode-back" href="../../../../scripts.engine.internal.html#scripts.engine.internal.action.Behaviour">[docs]</a><span class="k">class</span> <span class="nc">Behaviour</span><span class="p">(</span><span class="n">ABC</span><span class="p">):</span>
