--- a/_modules/scripts/engine/internal/effect.html
+++ b/_modules/scripts/engine/internal/effect.html
@@ -443,6 +443,9 @@
 
                 <span class="c1"># update position</span>
                 <span class="k">if</span> <span class="n">_position</span><span class="p">:</span>
+                    <span class="n">logging</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span>
+                        <span class="sa">f</span><span class="s2">"-&gt;'</span><span class="si">{</span><span class="n">world</span><span class="o">.</span><span class="n">get_name</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">target</span><span class="p">)</span><span class="si">}</span><span class="s2">' moved from (</span><span class="si">{</span><span class="n">pos</span><span class="o">.</span><span class="n">x</span><span class="si">}</span><span class="s2">,</span><span class="si">{</span><span class="n">pos</span><span class="o">.</span><span class="n">y</span><span class="si">}</span><span class="s2">) to (</span><span class="si">{</span><span class="n">new_x</span><span class="si">}</span><span class="s2">,"</span> <span class="sa">f</span><span class="s2">"</span><span class="si">{</span><span class="n">new_y</span><span class="si">}</span><span class="s2">)."</span>
+                    <span class="p">)</span>
                     <span class="n">_position</span><span class="o">.</span><span class="n">set</span><span class="p">(</span><span class="n">new_x</span><span class="p">,</span> <span class="n">new_y</span><span class="p">)</span>
 
                     <span class="c1"># post interaction event</span>
@@ -501,7 +504,7 @@
                         <span class="c1"># blocked by entity</span>
                         <span class="n">blockers_name</span> <span class="o">=</span> <span class="n">world</span><span class="o">.</span><span class="n">get_name</span><span class="p">(</span><span class="n">other_entity</span><span class="p">)</span>
                         <span class="n">logging</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span>
-                            <span class="sa">f</span><span class="s2">"'</span><span class="si">{</span><span class="n">name</span><span class="si">}</span><span class="s2">' tried to move in </span><span class="si">{</span><span class="n">direction_name</span><span class="si">}</span><span class="s2"> to (</span><span class="si">{</span><span class="n">target_x</span><span class="si">}</span><span class="s2">,</span><span class="si">{</span><span class="n">target_y</span><span class="si">}</span><span class="s2">) but was blocked"</span>
+                            <span class="sa">f</span><span class="s2">"'</span><span class="si">{</span><span class="n">name</span><span class="si">}</span><span class="s2">' tried to move </span><span class="si">{</span><span class="n">direction_name</span><span class="si">}</span><span class="s2"> to (</span><span class="si">{</span><span class="n">target_x</span><span class="si">}</span><span class="s2">,</span><span class="si">{</span><span class="n">target_y</span><span class="si">}</span><span class="s2">) but was blocked"</span>
                             <span class="sa">f</span><span class="s2">" by '</span><span class="si">{</span><span class="n">blockers_name</span><span class="si">}</span><span class="s2">'. "</span>
                         <span class="p">)</span>
                         <span class="k">break</span>
@@ -577,20 +580,35 @@
 <span class="sd">        Applies an affliction to an entity</span>
 <span class="sd">        """</span>
         <span class="n">logging</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span><span class="s2">"Evaluating Apply Affliction Effect..."</span><span class="p">)</span>
+        <span class="n">affliction_name</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">affliction_name</span>
+        <span class="n">origin</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">origin</span>
+        <span class="n">target</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">target</span>
+        <span class="n">duration</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">duration</span>
 
-        <span class="n">affliction_instance</span> <span class="o">=</span> <span class="n">world</span><span class="o">.</span><span class="n">create_affliction</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">affliction_name</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">origin</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">target</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">duration</span><span class="p">)</span>
+        <span class="n">affliction_instance</span> <span class="o">=</span> <span class="n">world</span><span class="o">.</span><span class="n">create_affliction</span><span class="p">(</span><span class="n">affliction_name</span><span class="p">,</span> <span class="n">origin</span><span class="p">,</span> <span class="n">target</span><span class="p">,</span> <span class="n">duration</span><span class="p">)</span>
+
+        <span class="c1"># check for immunities</span>
+        <span class="k">if</span> <span class="n">world</span><span class="o">.</span><span class="n">entity_has_immunity</span><span class="p">(</span><span class="n">target</span><span class="p">,</span> <span class="n">affliction_name</span><span class="p">):</span>
+            <span class="n">logging</span><span class="o">.</span><span class="n">debug</span><span class="p">(</span>
+                <span class="sa">f</span><span class="s2">"'</span><span class="si">{</span><span class="n">world</span><span class="o">.</span><span class="n">get_name</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">origin</span><span class="p">)</span><span class="si">}</span><span class="s2">' failed to apply </span><span class="si">{</span><span class="n">affliction_name</span><span class="si">}</span><span class="s2"> to  "</span>
+                <span class="sa">f</span><span class="s2">"'</span><span class="si">{</span><span class="n">world</span><span class="o">.</span><span class="n">get_name</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">target</span><span class="p">)</span><span class="si">}</span><span class="s2">' as they are immune."</span>
+            <span class="p">)</span>
+            <span class="k">return</span> <span class="kc">False</span><span class="p">,</span> <span class="bp">self</span><span class="o">.</span><span class="n">failure_effects</span>
 
         <span class="c1"># add the affliction to the afflictions component</span>
-        <span class="k">if</span> <span class="n">world</span><span class="o">.</span><span class="n">entity_has_component</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">target</span><span class="p">,</span> <span class="n">Afflictions</span><span class="p">):</span>
-            <span class="n">afflictions</span> <span class="o">=</span> <span class="n">world</span><span class="o">.</span><span class="n">get_entitys_component</span><span class="p">(</span><span class="bp">self</span><span class="o">.</span><span class="n">target</span><span class="p">,</span> <span class="n">Afflictions</span><span class="p">)</span>
+        <span class="k">if</span> <span class="n">world</span><span class="o">.</span><span class="n">entity_has_component</span><span class="p">(</span><span class="n">target</span><span class="p">,</span> <span class="n">Afflictions</span><span class="p">):</span>
+            <span class="n">afflictions</span> <span class="o">=</span> <span class="n">world</span><span class="o">.</span><span class="n">get_entitys_component</span><span class="p">(</span><span class="n">target</span><span class="p">,</span> <span class="n">Afflictions</span><span class="p">)</span>
             <span class="n">afflictions</span><span class="o">.</span><span class="n">add</span><span class="p">(</span><span class="n">affliction_instance</span><span class="p">)</span>
             <span class="n">world</span><span class="o">.</span><span class="n">apply_affliction</span><span class="p">(</span><span class="n">affliction_instance</span><span class="p">)</span>
 
+            <span class="c1"># add immunities to prevent further applications for the duration</span>
+            <span class="n">world</span><span class="o">.</span><span class="n">add_immunity</span><span class="p">(</span><span class="n">target</span><span class="p">,</span> <span class="n">affliction_name</span><span class="p">,</span> <span class="n">duration</span> <span class="o">+</span> <span class="mi">2</span><span class="p">)</span>
+
             <span class="c1"># post interaction event</span>
             <span class="n">event</span> <span class="o">=</span> <span class="n">AfflictionEvent</span><span class="p">(</span>
-                <span class="n">origin</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">origin</span><span class="p">,</span>
-                <span class="n">target</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">target</span><span class="p">,</span>
-                <span class="n">affliction_name</span><span class="o">=</span><span class="bp">self</span><span class="o">.</span><span class="n">affliction_name</span><span class="p">,</span>
+                <span class="n">origin</span><span class="o">=</span><span class="n">origin</span><span class="p">,</span>
+                <span class="n">target</span><span class="o">=</span><span class="n">target</span><span class="p">,</span>
+                <span class="n">affliction_name</span><span class="o">=</span><span class="n">affliction_name</span><span class="p">,</span>
             <span class="p">)</span>
             <span class="n">event_hub</span><span class="o">.</span><span class="n">post</span><span class="p">(</span><span class="n">event</span><span class="p">)</span>
 
