--- a/_modules/scripts/nqp/processors/game.html
+++ b/_modules/scripts/nqp/processors/game.html
@@ -349,6 +349,7 @@
     <span class="n">system</span><span class="o">.</span><span class="n">reduce_skill_cooldowns</span><span class="p">()</span>
     <span class="n">system</span><span class="o">.</span><span class="n">reduce_affliction_durations</span><span class="p">()</span>
     <span class="n">system</span><span class="o">.</span><span class="n">reduce_lifespan_durations</span><span class="p">()</span>
+    <span class="n">system</span><span class="o">.</span><span class="n">reduce_immunity_durations</span><span class="p">()</span>
 
     <span class="n">chronicle</span><span class="o">.</span><span class="n">next_round</span><span class="p">()</span></div>
 </pre></div>
